# OpenGLEngine

./: .gitignore  README.md  TODO.md
Game/: CMakeLists.txt
Game/Airplanes/: CMakeLists.txt  main.cpp
Game/Airplanes/assets/: rifle2.pdn
Game/Airplanes/assets/models/obsidian/: Obsidian.mtl
Game/Airplanes/src/: main.cpp
Game/Engine/: CMakeLists.txt
Game/Engine/include/OpenGLClass/: IndexBufferObject.hpp  Shader.hpp  Texture.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp
Game/Engine/include/Shape/: CircleSector.hpp  JellyWithTexture.hpp  Line.hpp  OldJelly.hpp  Quadrangle.hpp  SimpleRect.hpp
Game/Engine/include/Shape/Interfaces/: IDrawable.hpp  IHasShader.hpp
Game/Engine/include/Vertex/: AVertex.hpp  Vertex2D.hpp  Vertex2DText.hpp  Vertex3DText.hpp  VertexUtils.hpp
Game/Engine/include/ZakEngine/EngineCore/: AssetsManager.hpp  ObjLoader.hpp  Renderer.hpp
Game/Engine/include/ZakEngine/OpenGLClass/: AOpenGLClass.hpp  IndexBufferObject.hpp  Mesh.hpp  Uniform.hpp  VertexBufferLayout.hpp  VertexBufferObject.hpp
Game/Engine/include/ZakEngine/Shape/: AShape.hpp  Circle.hpp  Jelly.hpp  JellyWithTexture.hpp  Line.hpp  OldCircle.hpp  OldCircleSector.hpp  OldJelly.hpp  OldLine.hpp  OldQuadrangle.hpp  ShapeWithUniform.hpp  SimpleRect.hpp
Game/Engine/include/ZakEngine/Shape/Interfaces/: IDrawable.hpp  IHasIndexBufferObject.hpp  IHasTexture.hpp  IHasVertexArrayObject.hpp  IHasVertexBufferObject.hpp  IHasVertexVector.hpp
Game/Engine/include/ZakEngine/Vertex/: AVertex.hpp  Vertex3DNormText.hpp  VertexUtils.hpp
Game/Engine/include/ZakEngine/utils/: GLMacro.h  functions.hpp
Game/Engine/include/utils/: GLMacro.h
Game/Engine/src/EngineCore/: AssetsManager.cpp  ObjLoader.cpp  Renderer.cpp
Game/Engine/src/OpenGLClass/: Mesh.cpp  Shader.cpp  Texture.cpp
Game/Engine/src/Shape/: Jelly.cpp  JellyWithTexture.cpp  OldJelly.cpp
Game/Engine/src/utils/: functions.cpp
Jelly/: CMakeLists.txt
Jelly/assets/models/teapot/: teapot2.mtl
Jelly/res/shaders/: model_shader.shader  texture_shader.shader
Jelly/src/: Jelly.cpp  main.cpp
Jelly/src/EngineCore/: AssetsManager.cpp  AssetsManager.hpp  ObjLoader.cpp  ObjLoader.hpp  Renderer.cpp  Renderer.hpp
Jelly/src/OpenGLClass/: IndexBufferObject.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Uniform.hpp  VertexArrayObject.hpp  VertexBufferLayout.hpp  VertexBufferObject.hpp
Jelly/src/Shader/: Shader.cpp  Shader.hpp
Jelly/src/Shape/: AShape.hpp  Circle.hpp  CircleSector.hpp  IDrawable.hpp  Jelly.cpp  Jelly.hpp  JellyWithTexture.cpp  JellyWithTexture.hpp  Line.hpp  OldCircle.hpp  OldCircleSector.hpp  OldJelly.cpp  OldJelly.hpp  OldLine.hpp  OldQuadrangle.hpp  Quadrangle.hpp  ShapeWithUniform.hpp  SimpleRect.hpp
Jelly/src/Shape/Interfaces/: IDrawable.hpp  IHasIndexBufferObject.hpp  IHasShader.hpp  IHasTexture.hpp  IHasVertexArrayObject.hpp  IHasVertexBufferObject.hpp  IHasVertexVector.hpp  IRenderable.hpp
Jelly/src/Vertex/: 2DVertex.hpp  AVertex.hpp  Vertex2D.hpp  Vertex2DText.hpp  Vertex3DNormText.hpp  Vertex3DText.hpp  VertexUtils.hpp
Jelly/src/utils/: GLMHash.hpp  GLMacro.h  functions.cpp  functions.hpp
OpenGL1/: CMakeLists.txt  CMakePresets.json
OpenGL1/src/: OpenGL1.cpp
OpenGL2/: CMakeLists.txt
OpenGL2/res/shaders/: shader.shader
OpenGL2/src/: OpenGL2.cpp
OpenGL3/: CMakeLists.txt
OpenGL3/res/shaders/: shader.shader
OpenGL3/src/: OpenGL3.cpp
OpenGL4/: CMakeLists.txt  CMakePresets.json
OpenGL4/src/: OpenGL4.cpp
OpenGL4/src/Shader/: Shader.cpp  Shader.hpp
OpenGL4/src/Vertex/: 2DVertex.hpp  AVertex.hpp
OpenGL4/src/utils/: GLMacro.h
ZakOpenGLEngine/: CMakeLists.txt
ZakOpenGLEngine/Airplanes/: CMakeLists.txt
ZakOpenGLEngine/Airplanes/res/shaders/: default_shader.shader  model_shader.shader
ZakOpenGLEngine/Airplanes/src/: main.cpp  main.hpp  main1.cpp  main2.cpp  main3.cpp
ZakOpenGLEngine/Engine/: CMakeLists.txt
ZakOpenGLEngine/Engine/include/ZakEngine/EngineCore/: AssetsManager.hpp  ObjLoader.hpp  Renderer.hpp
ZakOpenGLEngine/Engine/include/ZakEngine/OpenGLClass/: IndexBufferObject.hpp  Shader.hpp  Texture.hpp  Uniform.hpp  VertexArrayObject.hpp  VertexBufferLayout.hpp  VertexBufferObject.hpp
ZakOpenGLEngine/Engine/include/ZakEngine/Shape/: AShape.hpp  CircleSector.hpp  Line.hpp  Quadrangle.hpp  ShapeWithUniform.hpp
ZakOpenGLEngine/Engine/include/ZakEngine/Shape/Interfaces/: IHasShader.hpp  IHasTexture.hpp  IHasVertexArrayObject.hpp  IHasVertexVector.hpp
ZakOpenGLEngine/Engine/include/ZakEngine/Vertex/: Vertex2D.hpp  Vertex2DText.hpp  Vertex3DNormText.hpp  Vertex3DText.hpp
ZakOpenGLEngine/Engine/include/ZakEngine/utils/: GLMHash.hpp  functions.hpp
ZakOpenGLEngine/Engine/src/EngineCore/: AssetsManager.cpp  ObjLoader.cpp  Renderer.cpp
ZakOpenGLEngine/Engine/src/OpenGLClass/: Shader.cpp  Texture.cpp
ZakOpenGLEngine/Engine/src/utils/: functions.cpp
ZakOpenGLEngine/Graphics/: CMakeLists.txt  resources.aps
ZakOpenGLEngine/Graphics/res/shaders/: graphic_shader.shader  model_with_texture_shader.shader
ZakOpenGLEngine/Graphics/src/: main.cpp
ZakOpenGLEngine/Jelly/: CMakeLists.txt
ZakOpenGLEngine/Jelly/include/CustomShapes/: Jelly.hpp  JellyWithTexture.hpp
ZakOpenGLEngine/Jelly/src/: main.cpp
ZakOpenGLEngine/Jelly/src/CustomShapes/: Jelly.cpp  JellyWithTexture.cpp
